# vd-hotkeys

./: .gitignore  BUILD.md  Cargo.toml  LICENSE  README.md  install.ps1  package.ps1  uninstall.ps1  vd-hotkeys.iss
src/: config.rs  main.rs
